# PRISM-Single

./: README.md
backend/: .env.example  .gitignore  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260220_0001_init.py  20260220_0002_run_id_and_retrieval_error.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  artifact.py  document.py  message.py  prompt_run.py  retrieval_log.py  session.py
backend/app/schemas/: ai.py  artifacts.py  common.py  rag.py  session.py
backend/app/services/: file_store.py  openai_service.py  rag_service.py  repositories.py  tavily_service.py
backend/app/tasks/: registry.py  runner.py
backend/app/utils/: serializers.py  text.py
backend/prism_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: ingest_job_std_jd_csv_20250901.py  live_e2e_test.py  smoke_test.py
backend/tests/: test_live_e2e.py
prism-next/: next.config.ts  package-lock.json  package.json
prism-next/src/app/: globals.css  layout.tsx  page.tsx
prism-next/src/app/components/: ChatUI.tsx  FooterStepNav.tsx  InterviewSummaryPanel.tsx  Layout.tsx  LeftNav.tsx  RightPanel.tsx  TopBar.tsx
prism-next/src/app/pages/: Phase1-2.tsx  Phase1.tsx  Phase2-1.tsx  Phase2-2.tsx  Phase3-1.tsx  Phase3-2.tsx  Phase4-1.tsx  Phase4-2.tsx  Phase4-3.tsx  Report.tsx
prism-next/src/lib/: backend.ts  flowSteps.ts  interviewSummary.ts
prism-next/src/styles/: theme.css
(+11 files in other folders)
